[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Boat/PlayerBoat.gd" type="Script" id=1]
[ext_resource path="res://scenes/Boat/Sprites/PlainBoat.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/GUI/FloatingNumbers/DamageController.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/CannonGun/CannonGunAngle.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/CannonGun/CannonGun.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Boat/Fire.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Widget/HealthDisplay.tscn" type="PackedScene" id=15]

[sub_resource type="GDScript" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.2869
height = 68.201

[sub_resource type="CircleShape2D" id=3]
radius = 142.737

[node name="Boat" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2147483655
collision_mask = 7
script = ExtResource( 1 )

[node name="AnimatedBoatSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.08159, 1.08159 )
frames = ExtResource( 2 )
animation = "hp_green"
script = SubResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Fire" parent="." instance=ExtResource( 14 )]

[node name="CannonGunLeft" parent="." instance=ExtResource( 13 )]

[node name="CannonGunAngle" parent="CannonGunLeft" instance=ExtResource( 12 )]
rotation = -1.5708

[node name="CannonGunRight" parent="." instance=ExtResource( 13 )]
rotation = 3.14159

[node name="CannonGunAngle" parent="CannonGunRight" instance=ExtResource( 12 )]
rotation = -1.5708

[node name="HealthDisplay" parent="." instance=ExtResource( 15 )]

[node name="CollisionDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
shape = SubResource( 3 )

[node name="DamageController" parent="." instance=ExtResource( 3 )]
[connection signal="input_event" from="." to="." method="_on_PlayerBoat_input_event"]
[connection signal="fire" from="CannonGunLeft" to="." method="_on_CannonGunLeft_fire"]
[connection signal="fire" from="CannonGunRight" to="." method="_on_CannonGunRight_fire"]
[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
